# *****************************************************************************
# Filename:			Makefile.am
# Description:
# Copyright(c):
# Author(s):		Jay Cotton	
# Created:		18 Feb 2015	
# Last modified:	18 Feb 2015	
# Notes:
# *****************************************************************************


#AUTOMAKE_OPTOINS = foreign

SUBDIRS = src


