# *****************************************************************************
# Filename:			configure.ac
# Description:
# Copyright(c):
# Author(s):		Jay Cotton
# Created:		18 Feb 2015	
# Last modified:	18 Feb 2015	
#
# Notes	- Process this file with autoconf to produce a configure 
#						  script.
# *****************************************************************************


#AC_PREREQ(2.60)

#AC_INIT(macro, 2.0 , lbmgmusic@gmail.com)
#AC_INIT(macro)
AC_INIT(src)

#AC_CONFIG_SRCDIR([macro.c])
#AC_CONFIG_HEADER([macro.h])

#AM_INIT_AUTOMAKE(macro, main)
AM_INIT_AUTOMAKE(macro, 1.0.0)

# Checks for programs.
# --------------------
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.
#
AM_PROG_LIBTOOL

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile src/Makefile])

#AC_OUTPUT(app/Makefile)
#AC_OUTPUT(src/Makefile Makefile)
AC_OUTPUT



