# *****************************************************************************
# Filename:			Makefile.am
# Description:
# Copyright(c):
# Author(s):		Jay Cotton
# Created:		18 Feb 2015	
# Last modified:	18 Feb 2015	
# Notes:
# *****************************************************************************


AM_CFLAGS = -g -Wall 

bin_PROGRAMS = macro

macro_SOURCES = macro.c main.c global.c process.c util.c
